Clean up logging